feat: alterando fov

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <div id="ui">
     <div class="title">Feliz Aniversário</div>
-    <div class="subtitle">Para a melhor flautista</div>
+    <div class="subtitle">Para uma flautista incrível</div>
   </div>
 
   <script type="importmap">
@@ -185,8 +185,7 @@
           "dominando o mundo aos poucos",
           "e sendo exatamente quem você é.",
           "",
-          "Feliz aniversário.",
-          "Hehehehehehe."
+          "Espero que tenha gostado."
         ]
       }
 
