--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
     }
 
     .subtitle {
-      font-size: 12px;
-      color: #888;
-      letter-spacing: 4px;
+      font-size: 11px;
+      color: #777;
+      letter-spacing: 3px;
+      opacity: 0.75;
       text-transform: uppercase;
       margin-top: 5px;
     }
@@ -144,20 +145,20 @@
       fotos: [
         {
           arquivo: './imgs/foto1.jpg',
-          pos: { x: -3.5, y: 3.2, z: 2 },
-          rot: { x: -Math.PI / 2, y: 0, z: 0.1 },
+          pos: { x: -3.5, y: 3.23, z: 2 },
+          rot: { x: (-Math.PI / 2) - 0.03, y: 0, z: 0.15 },
           tamanho: 2.5
         },
         {
           arquivo: './imgs/foto2.jpg',
-          pos: { x: -3, y: 3.2, z: -2.5 },
-          rot: { x: -Math.PI / 2, y: 0, z: -0.05 },
+          pos: { x: -3, y: 3.23, z: -2.5 },
+          rot: { x: (-Math.PI / 2) - 0.03, y: 0, z: -0.05 },
           tamanho: 1.8
         },
         {
           arquivo: './imgs/foto3.jpg',
-          pos: { x: -5, y: 3.2, z: -1 },
-          rot: { x: -Math.PI / 2, y: 0, z: 0.15 },
+          pos: { x: -5, y: 3.23, z: -1 },
+          rot: { x: (-Math.PI / 2) - 0.03, y: 0, z: -0.15 },
           tamanho: 1.8
         }
       ],
@@ -185,7 +186,7 @@
           "dominando o mundo aos poucos",
           "e sendo exatamente quem você é.",
           "",
-          "Espero que tenha gostado."
+          "Feliz aniversário."
         ]
       }
 
@@ -194,6 +195,7 @@
     let scene, camera, renderer, controls, particles;
     let loadedCount = 0;
     const totalToLoad = 6;
+    let cartaMesh;
 
     init();
 
@@ -436,7 +438,8 @@
       card.position.set(0, 3.15, 0);
       card.receiveShadow = true;
       card.castShadow = true;
-      scene.add(card);
+      cartaMesh = card;
+      scene.add(cartaMesh);
     }
 
     function createMagicDust() {
@@ -447,7 +450,7 @@
       }
       geom.setAttribute('position', new THREE.Float32BufferAttribute(pos, 3));
       particles = new THREE.Points(geom, new THREE.PointsMaterial({
-        color: 0xffd700, size: 0.08, transparent: true, opacity: 0.6, blending: THREE.AdditiveBlending
+        color: 0xffd700, size: 0.06, transparent: true, opacity: 0.4, blending: THREE.AdditiveBlending
       }));
       scene.add(particles);
     }
@@ -470,6 +473,14 @@
     function animate() {
       requestAnimationFrame(animate);
       controls.update();
+
+      if (cartaMesh) {
+        cartaMesh.position.y = 3.20 + Math.sin(Date.now() * 0.001) * 0.015;
+        const distCarta = camera.position.distanceTo(cartaMesh.position);
+        const foco = THREE.MathUtils.clamp(1.6 - distCarta * 0.05, 0.8, 1.2);
+
+        cartaMesh.material.roughness = 0.7 - foco * 0.1;
+      }
 
       const dist = camera.position.distanceTo(controls.target);
 
